# sdk_python

./: README.md  pyproject.toml  test.py
src/Data/: db.py
src/Data/http/: __init__.py  client.py  manejo_errores.py
src/data_acces_sdk/: __init__.py  config.py
src/data_acces_sdk/resources/: Empleados.py  __init__.py  base.py
src/data_access_sdk/: __init__.py  config.py  db.py  exceptions.py
src/data_access_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/data_access_sdk/Common/: pagination.py
src/data_access_sdk/Models/: __init__.py
src/data_access_sdk/Models/Providers/: Proveedor.py  __init__.py
src/data_access_sdk/Validator/: proveedor_validators.py
src/data_access_sdk/http/: client.py
src/data_access_sdk/resources/: Proveedores.py  __init__.py
